--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.5",
-    "vitest": "^2.1.8",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1"
+    "vitest": "^2.1.8"
+  },
+  "dependencies": {
+    "modern-normalize": "^3.0.1",
+    "reactive-fluid": "^0.1.0"
   }
 }
